--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
+    "react-js-pagination": "^3.0.2",
+    "react-paginate": "^5.2.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
