--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
     "react-input-range": "^1.3.0",
+    "react-paginate": "^5.2.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-social-share-buttons": "^1.0.2",
