--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "react-flexbox-grid": "^2.0.0",
     "react-input-range": "^1.3.0",
     "react-paginate": "^5.2.3",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-social-share-buttons": "^1.0.2",
-    "recharts": "^1.0.0-beta.10"
+    "recharts": "^1.0.0-beta.10",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
