--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
     "firebase": "^5.0.1",
     "material-ui": "^0.20.0",
     "moment": "^2.22.1",
